--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -1211,6 +1211,7 @@
         <a href="{% url 'wishlist' %}" class="side-menu-item"><i class="fas fa-heart"></i><span>Wishlist</span></a>
         <a href="#" class="side-menu-item"><i class="fas fa-shopping-cart"></i><span>Cart</span></a>
         <a href="#" class="side-menu-item"><i class="fas fa-user"></i><span>Profile</span></a>
+        <a href="{% url 'my_chats' %}" class="side-menu-item"><i class="fas fa-comments"></i><span>My Chats</span></a>
         <a href="#" class="side-menu-item"><i class="fas fa-cog"></i><span>Settings</span></a>
         <a href="#" class="side-menu-item"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
     </div>
