product add page setup

--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -1253,7 +1253,7 @@
     </div>
 
     <!-- Professional SELL button -->
-    <button class="fixed-sell-btn">
+    <button class="fixed-sell-btn" onclick="window.location.href='{% url 'select_category' %}'">
         <i class="fas fa-plus"></i>
         <span>Sell</span>
     </button>
